infra/k8s/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sub-engine-ingress
  namespace: sub-engine
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/subscriptions(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: subscription-service
                port:
                  number: 8081
          - path: /api/billing(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: billing-service
                port:
                  number: 8082
          - path: /api/worker(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: worker-service
                port:
                  number: 8083
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 8084
